# oci-genai-auth-python

./: .gitignore  LICENSE.txt  MIGRATION.md  Makefile  README.md  THIRD_PARTY_LICENSES.txt  pyproject.toml
.github/workflows/: publish-to-pypi.yml  run-all-check.yaml
examples/: common.py  fc_tools.py
examples/agenthub/: README.md  common.py  quickstart_responses_create_api_key.py  quickstart_responses_create_oci_iam.py
examples/agenthub/agents/: basic_agents_example.py
examples/agenthub/converstions/: conversation_items_crud.py  conversations_crud.py
examples/agenthub/files/: files_crud.py
examples/agenthub/function/: create_response_fc_parallel_tool.py  create_responses_fc.py
examples/agenthub/mcp/: create_response_approval_flow.py  create_response_two_mcp.py  create_responses_mcp.py  create_responses_mcp_auth.py
examples/agenthub/memory/: long_term_memory.py  long_term_memory_access_policy.py  short_term_memory_optimization.py
examples/agenthub/multiturn/: conversations_api.py  responses_chaining.py
examples/agenthub/openai/: common.py  quickstart_responses_create_api_key.py  quickstart_responses_create_oci_iam.py
examples/agenthub/responses/: create_response.py  create_response_store_false.py  delete_response.py  file_input_with_file_id.py  (+12 more)
examples/anthropic/: basic_messages.py  basic_messages_api_key.py  basic_messages_async.py  common.py  messages_context_management.py  messages_image_text.py  messages_memory.py  messages_speed_fast.py  messages_streaming.py  messages_tool_search_client_side.py  messages_web_fetch.py  messages_web_search.py
examples/enterprise_ai_agents/: README.md  common.py  quickstart_responses_create_api_key.py  quickstart_responses_create_oci_iam.py
examples/google/: gemini_api_key.py  generate_content.py  generate_content_api_key.py  generate_content_async.py  generate_content_streaming.py  generate_images.py
examples/oci_openai/: basic_agents_example.py  create_responses_mcp.py  create_responses_multiturn.py  create_responses_websearch.py  create_responses_with_conversation_id.py  oci_openai_chat_completions_example.py  oci_openai_responses_example.py
examples/openai/: basic_agents_example.py  create_responses_mcp.py  create_responses_multiturn.py  create_responses_websearch.py  create_responses_with_conversation_id.py  oci_openai_chat_completions_example.py  oci_openai_responses_example.py
examples/partner/: README.md  common.py
src/oci_genai_auth/: __about__.py  __init__.py  auth.py  oci_openai.py
src/oci_genai_support/: __init__.py  oci_openai.py
tests/: conftest.py  test_auth.py
tests/anthropic_tests/: test_anthropic_client.py
tests/google_tests/: test_google_genai_client.py
tests/openai_agents_tests/: common.py  test_agent.py
tests/openai_tests/: common.py  test_async_oci_openai.py  test_chat_api.py  test_sync_oci_openai.py
(+166 files in other folders)
