[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oci-genai-auth"
dynamic = ["version"]
description = 'OCI authentication and authorization utilities for Generative AI SDKs'
readme = "README.md"
requires-python = ">=3.9"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
keywords = [
      "Oracle",
      "Oracle Cloud Infrastructure",
      "OCI",
      "Artificial Intelligence",
      "AI",
      "GenAI",
      "Generative AI",
]
authors = [{ name = "Chao Yang", email = "chao.c.yang@oracle.com" }]
classifiers = [
      "Intended Audience :: Developers",
      "Programming Language :: Python",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Topic :: System :: Benchmark",
      "Typing :: Typed",
]
dependencies = [
      "httpx>=0.23.0, <1",
      "oci>=2.150.1",
      "requests>=2.32.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
      "ruff>=0.5.6,<0.6.0",
      "mypy>=1.11.1,<2.0.0",
      "black>=24.8.0,<25.0.0",
      "isort>=5.13.2,<6.0.0",
      "pytest>=8.3.2,<9.0.0",
      "pytest-cov>=5.0.0,<6.0.0",
      "respx",
      "typing-extensions>=4.11, <5",
      "openai>=1.108.1",
      "openai-agents>=0.5.1",
      "pytest-mock",
      "ag2[openai]",
      "pytest-httpx",
      "pytest-asyncio",
      "eval_type_backport",
      "rich>=13.0"
]

[project.urls]
Documentation = "https://github.com/oracle-samples/oci-genai-auth#readme"
Issues = "https://github.com/oracle-samples/oci-genai-auth/issues"
Source = "https://github.com/oracle-samples/oci-genai-auth"

[tool.hatch.version]
path = "src/oci_genai_auth/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/oci_genai_auth tests}"

[tool.coverage.run]
source_pkgs = ["oci_genai_auth", "tests"]
branch = true
parallel = true
omit = [
    "src/oci_genai_auth/__about__.py",
]

[tool.coverage.paths]
oci_genai_auth = ["src/oci_genai_auth", "*/oci-genai-auth/src/oci_genai_auth"]
tests = ["tests", "*/oci-genai-auth/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = [
]

[tool.ruff.lint]
select = [
      # pycodestyle
      "E",
      # Pyflakes
      "F",
      # flake8-bugbear
      "B",
      # flake8-simplify
      "SIM",
      "G",
]

[tool.black]
line-length = 100
target-version = ['py39']
exclude = '\.venv|build|dist'
